@@ -141,7 +141,7 @@ class Format:
     def get_data(self):
         return self._data
 
-    def _set_data(self, data):
+    def set_data(self, data):
         self._data = data
 
     def is_on_disk(self):
